devops/k8s/jitsi/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: jitsi/web:stable
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jitsi
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 80
